--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/recharts": "^1.8.24",
     "@types/recoil": "^0.0.9",
     "axios": "^1.2.1",
     "firebase": "^9.14.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "recoil": "^0.7.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
