--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.2.0",
     "recoil": "^0.7.6",
+    "styled-reset": "^4.4.4",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
