--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "^0.14.0",
     "@types/firebase": "^3.2.1",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.6",
     "@types/react": "^18.0.26",
@@ -17,11 +18,13 @@
     "@types/recoil": "^0.0.9",
     "axios": "^1.2.1",
     "firebase": "^9.14.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.7",
     "recharts": "^2.2.0",
     "recoil": "^0.7.6",
     "styled-reset": "^4.4.4",
