--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,12 @@
 [[redirects]]
 from = "/api/*"
-to = "https://openapi.naver.com/:splat"
+to = "https://api.openweathermap.org/data/2.5/group:splat"
+status = 200
+force = true
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
 status = 200
 
 [build]
