--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/recharts": "^1.8.24",
     "@types/recoil": "^0.0.9",
     "axios": "^1.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "firebase": "^9.14.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
