--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/recharts": "^1.8.24",
     "@types/recoil": "^0.0.9",
     "axios": "^1.2.1",
-    "eslint-plugin-prettier": "^4.2.1",
     "firebase": "^9.14.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -59,6 +58,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
-    "eslint": "^8.30.0"
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1"
   }
 }
