--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "trailingComma": "all",
   "singleQuote": true,
   "printWidth": 160,
-  "tabWidth": 2
+  "tabWidth": 2,
+  "editor.formatOnType": true
 }
