--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-inferrable-types": [true],
     "no-shadow": "off",
     "react/prop-types": 0,
     "no-empty-pattern": 0,
