Docs: eslint 설정 수정

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/extensions": 0,
     "no-use-before-define": 0, 
+    "prefer-const": 0,
     "@typescript-eslint/no-empty-interface": 0,
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-var-requires": 0,
