--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,8 @@
     "react/prop-types": 0,
     "no-empty-pattern": 0,
     "no-alert": 0,
-    "react-hooks/exhaustive-deps": 0
+    "react-hooks/exhaustive-deps": 0,
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]   
   },
   "settings": { 
     "import/parsers": {
